<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="appName">Eventer</string>
    <string name="appDescription">Experiences to fight loneliness</string>
    <string name="facebook_app_id">395988721785201</string>
    <string name="fb_login_protocol_scheme">fb395988721785201</string>
    <string name="nav_bar_home">Home</string>
    <string name="nav_bar_search">Search</string>
    <string name="nav_bar_list">List</string>
    <string name="nav_bar_profile">Profile</string>
    <string name="fragment_home">Fragment Home></string>
    <string name="fragment_search">Fragment Search</string>
    <string name="fragment_create">Fragment Create</string>
    <string name="fragment_list">Fragment List</string>
    <string name="fragment_profile">Fragment Profile</string>
    <string name="fragment_event">Fragment Event</string>
    <string name="about">About</string>
    <string name="search_hint">Search here …</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register_string1">Not a member? </string>
    <string name="register_string2">Join now</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="log_in">Log in</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="choose_profile_picture_max_8">Choose Profile Picture (max 8)</string>
    <string name="day">Day*</string>
    <string name="month">Month*</string>
    <string name="year">Year*</string>
    <string name="address">Address</string>
    <string name="set_an_address">Set an address*</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name</string>
    <string name="occupation">Occupation</string>
    <string name="your_occupation">Your occupation*</string>
    <string name="education">Education</string>
    <string name="your_place_of_study">Your place of study*</string>
    <string name="your_description">Your description</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="submit">Submit</string>
    <string name="username">Username*</string>
    <string name="password">Password (Minimum 8 characters)*</string>
    <string name="type_password_again">Type password again*</string>
    <string name="create_a_user">Create a User</string>
    <string name="sign_up">Sign up</string>
    <string name="api_key">AIzaSyDUwkNv3lmgnANbJC09i-RiYGTlxdDXqyk</string>
    <string name="setStartTime">Set a start time</string>
    <string name="setEndTime">Set an end time</string>
    <string name="setStartDate">Set a start date</string>
    <string name="setEndDate">Set an end date</string>
    <string name="title_activity_create_event">ActivityCreateEvent</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="email_hint">email</string>
    <string name="finish">Finish</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>