<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".view.login.ActivityRegisterUserDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:background="@drawable/pfp_gradient_top2bot"
            android:layout_width="match_parent"
            android:layout_height="55sp">

            <ImageView
                android:id="@+id/activity_register_backButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_30"
                android:layout_alignParentStart="true"
                />

            <ImageView
                android:id="@+id/activity_register_submitButton1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:src="@drawable/ic_baseline_check_30_green"
                android:layout_alignParentEnd="true"
                />

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/activity_register_choose_pictures_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:elevation="10dp"
            >

            <com.google.android.material.chip.Chip
                android:id="@+id/activity_register_choose_pictures_button"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_profile_picture_max_8"
                app:chipCornerRadius="5dp"
                android:textSize="20sp"
                android:layout_margin="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:chipIcon="@drawable/ic_baseline_image_search_24"
                app:chipIconTint="@android:color/black"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/activity_register_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="5dp"
                android:textSize="20sp"
                android:hint="@string/first_name"
                android:background="@drawable/edit_text_rounded_white_background"
                />

            <EditText
                android:id="@+id/activity_register_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="5dp"
                android:textSize="20sp"
                android:hint="@string/last_name"
                android:background="@drawable/edit_text_rounded_white_background"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gender"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:layout_marginHorizontal="20dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <RadioButton android:id="@+id/activity_register_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:textColor="@android:color/white"
                android:text="@string/male"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton android:id="@+id/activity_register_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:textColor="@android:color/white"
                android:text="@string/female"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton android:id="@+id/activity_register_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:textColor="@android:color/white"
                android:text="@string/other"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/activity_register_dayTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="4"
                android:inputType="number"
                android:maxLength="2"
                android:layout_marginHorizontal="20dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:hint="@string/day"
                android:layout_marginVertical="10dp"
                android:background="@drawable/edit_text_rounded_white_background"
                />

            <EditText
                android:id="@+id/activity_register_monthText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="4"
                android:inputType="number"
                android:maxLength="2"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:hint="@string/month"
                android:layout_marginVertical="10dp"
                android:background="@drawable/edit_text_rounded_white_background"
                />

            <EditText
                android:id="@+id/activity_register_yearText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="4"
                android:inputType="number"
                android:maxLength="4"
                android:layout_marginHorizontal="15dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:hint="@string/year"
                android:layout_marginVertical="10dp"
                android:background="@drawable/edit_text_rounded_white_background"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/activity_register_addressText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none"
            android:layout_marginHorizontal="20dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:textSize="20sp"
            android:focusableInTouchMode="false"
            android:hint="@string/set_an_address"
            android:layout_marginVertical="10dp"
            android:background="@drawable/edit_text_rounded_white_background" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/occupation"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/activity_register_occupationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_marginHorizontal="20dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:textSize="20sp"
            android:hint="@string/your_occupation"
            android:layout_marginVertical="10dp"
            android:background="@drawable/edit_text_rounded_white_background" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/education"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/activity_register_educationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_marginHorizontal="20dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:textSize="20sp"
            android:hint="@string/your_place_of_study"
            android:layout_marginVertical="10dp"
            android:background="@drawable/edit_text_rounded_white_background" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"/>



        <EditText
            android:id="@+id/activity_register_aboutText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:layout_marginHorizontal="20dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:textSize="20sp"
            android:hint="@string/your_description"
            android:gravity="top"
            android:background="@drawable/edit_text_rounded_white_background"
            android:layout_marginVertical="10dp"
            />

        <LinearLayout
            android:id="@+id/activity_register_submitButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edit_text_rounded_white_background"
            android:backgroundTint="@color/confirm_green"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="30dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_check_30"
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dp"
                app:tint="@android:color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:textSize="20sp"
                android:paddingVertical="5dp"
                android:textColor="#2E2E2E"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>