<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.ActivityRegister"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <RelativeLayout
        android:background="@drawable/pfp_gradient_top2bot"
        android:layout_width="match_parent"
        android:layout_height="55sp">

        <ImageView
            android:id="@+id/activity_register_backButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_30"
            android:layout_alignParentStart="true"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/appName"
            android:textColor="@color/colorAccent"
            android:textSize="36sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="italic"
            android:text="@string/appDescription"
            android:textColor="@color/colorEditBackground"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_a_user"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/activity_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:singleLine="true"
            android:textSize="20sp"
            android:hint="@string/email_hint"
            android:background="@drawable/edit_text_rounded_white_background" />

        <EditText
            android:id="@+id/activity_register_password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:singleLine="true"
            android:textSize="20sp"
            android:hint="@string/password"
            android:background="@drawable/edit_text_rounded_white_background" />

        <EditText
            android:id="@+id/activity_register_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:singleLine="true"
            android:textSize="20sp"
            android:hint="@string/type_password_again"
            android:background="@drawable/edit_text_rounded_white_background" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_register_submitButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edit_text_rounded_white_background"
        android:backgroundTint="@color/confirm_green"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="30dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_check_30"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            app:tint="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:textSize="20sp"
            android:paddingVertical="5dp"
            android:textColor="#2E2E2E"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/activity_register_loading"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:lottie_rawRes="@raw/loading2"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_weight="1">

    </com.airbnb.lottie.LottieAnimationView>

</LinearLayout>